--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@ Variables
 */
 :root {
   --primaryLightColor: #cea5e6;
-  --primaryColor: #2470a3;
-  --primaryDarkColor: #44bd44;
+  --primaryColor: #5687a8;
+  --primaryDarkColor: #6abe6a;
   --mainWhite: #fff;
   --offWhite: #f7f7f7;
   --mainBackground: #f1f5f8;
@@ -14,7 +14,7 @@ Variables
   --mainBlack: #222;
   --mainGrey: #ececec;
   --darkGrey: #afafaf;
-  --mainRed: #0388bd;
+  --mainRed: #468eaa;
   --mainTransition: all 0.3s linear;
   --mainSpacing: 0.3rem;
   --lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
@@ -39,7 +39,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: var(--mainBlack);
-  background: rgb(191, 160, 212);
+  background: rgb(207, 186, 221);
   line-height: 1.4;
   font-size: 1rem;
   font-weight: 300;
